Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-98026

Nested QGraphicsViews do not clip some items when printing

XMLWordPrintable

    • Linux/X11, Windows
    • 1a984b3d2dde484d105d19265bc516ba18da2894 (qt/qtbase/dev) 040ee80219083b0662ba34c7bf5a420cd8b645db (qt/qtbase/6.2) 696ec5a6e1bbcc8eedf05f735a6d409478485469 (qt/tqtc-qtbase/5.15)

      Attached example has QGraphicsView inside another with a SVG image. On screen it looks fine, the content of the embedded graphics view is clipped, but when printed the SVG item is not clipped at all while all item types seem work properly.

      To reproduce, run attached example and look at the produced .pdf file.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vgt Eirik Aavitsland
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes