Avoid painting outside boundaries when printing QGraphicsProxyWidget

Implement clipping to widget geometry when rendering to other
paintdevices.

Fixes: QTBUG-98026
Change-Id: I5652bdb8cc052ae34f05ea7963943d2b5b28e220
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>
(cherry picked from commit 1a984b3d2dde484d105d19265bc516ba18da2894)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>